--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEWS_API_KEY=ee444ef5e43d400c998a975947054757
-DID_API_KEY=ZGhhcm1hbnNodXM4MzAzQGdtYWlsLmNvbQ:GyXBps2rWHCQSKgAJPCkx
-VIDEO_API_USERNAME=ZGhhcm1hbnNodXM4MzAzQGdtYWlsLmNvbQ
-VIDEO_API_PASSWORD=GyXBps2rWHCQSKgAJPCkx
+DID_API_KEY=c2luZ2hzaGFpbGVzaGt1bWFyMzA1QGdtYWlsLmNvbQ:MXpnicM3eQpZk1jM4VHDt
+VIDEO_API_USERNAME=c2luZ2hzaGFpbGVzaGt1bWFyMzA1QGdtYWlsLmNvbQ
+VIDEO_API_PASSWORD=MXpnicM3eQpZk1jM4VHDt
